--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </div>
 
           <div class="home-img-wrapper">
-            <img src="assets/img/profile.png" alt="" class="home-img" />
+            <img src="assets/img/pfp.png" alt="" class="home-img" />
           </div>
 
           <div class="home-social grid">
@@ -731,3 +731,4 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
